refactor: update tests